# DenseIG

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  try.py
denseig/: utils.py
denseig/ig/: __init__.py  integrated_gradients.py  utils.py
denseig/models/: DocModel.py  GenericIGModel.py  QueryModel.py  __init__.py
denseig/wrapers/: SentenceTransformerWrapper.py  __init__.py
example_attributes/: after_domain_adaptation_attr.html  before_domain_adaptation_attr.html
