[tool.poetry]
name = "denseig"
version = "0.1.0"
description = "This package contains the required tools to run dense retriever explainability analysis using integrated gradients."
authors = ["Goksenin Yuksel <Goksenin.yuksel@outlook.com>"] 
readme = ["README.md", "LICENSE"]
packages = [{include = "denseig"}]

[tool.poetry.dependencies]
python = "^3.8"
beir = "^2.0.0"
captum = "^0.6.0"
sentence-transformers = "^2.0.0"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"